@@ -7,6 +7,7 @@ session.use_cookies=0
 session.cache_limiter=
 register_globals=1
 session.serialize_handler=php
+session.save_handler=files
 --FILE--
 <?php
 error_reporting(E_ALL);
@@ -42,3 +43,4 @@ array(1) {
     int(2)
   }
 }
+PHP Warning:  Directive 'register_globals' is deprecated in PHP 5.3 and greater in Unknown on line 0
