@@ -109,3 +109,4 @@ array(1) {
   }
 }
 DESTROY: abtest
+PHP Warning:  Directive 'register_globals' is deprecated in PHP 5.3 and greater in Unknown on line 0
