@@ -69,3 +69,4 @@ array(1) {
   ["c"]=>
   float(3.14)
 }
+PHP Warning:  Directive 'register_long_arrays' is deprecated in PHP 5.3 and greater in Unknown on line 0
