@@ -34,3 +34,4 @@ print "I live\n";
 --EXPECTF--
 Deprecated: Function session_register() is deprecated in %s on line %d
 I live
+PHP Warning:  Directive 'register_globals' is deprecated in PHP 5.3 and greater in Unknown on line 0
