@@ -72,3 +72,4 @@ array(2) {
     int(44)
   }
 }
+PHP Warning:  Directive 'register_globals' is deprecated in PHP 5.3 and greater in Unknown on line 0
