@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: main.c,v 1.640.2.23.2.57.2.51 2009/05/04 19:55:47 derick Exp $ */
+/* $Id: main.c,v 1.640.2.23.2.57.2.52 2009/05/04 21:18:21 kalle Exp $ */
 
 /* {{{ includes
  */
@@ -1901,16 +1901,27 @@ int php_module_startup(sapi_module_struct *sf, zend_module_entry *additional_mod
 	/* Check for deprecated directives */
 	{
 		static const char *directives[] = {
-			"zend.ze1_compatibility_mode",
+			"define_syslog_variables", 
+			"register_globals", 
+			"register_long_arrays", 
+			"safe_mode", 
+			"magic_quotes_gpc", 
+			"magic_quotes_runtime", 
+			"magic_quotes_sybase", 
 			NULL};
 		const char **p = directives;
 		long val;
 
 		while (*p) {
 			if (cfg_get_long((char*)*p, &val) == SUCCESS && val) {
-				zend_error(E_WARNING, "Directive '%s' is no longer supported in PHP 5.3 and greater", *p);
+				zend_error(E_WARNING, "Directive '%s' is deprecated in PHP 5.3 and greater", *p);
 			}
 			++p;
+		}
+
+		/* This is not too nice, but since its the only one theres no need for extra stuff here */
+		if (cfg_get_long("zend.ze1_compatibility_mode", &val) == SUCCESS && val) {
+			zend_error(E_ERROR, "zend.ze1_compatibility_mode is no longer supported in PHP 5.3 and greater");
 		}
 	}
 
